syntax = "proto3";
package metrics;

service Metrics {
    rpc GetMetrics (GetMetricsRequest) returns (GetMetricsResponse);
    rpc GetLogs (GetLogsRequest) returns (GetLogsResponse);
}

message GetMetricsRequest {}
message GetMetricsResponse {
    string service_name = 1; // Name of the service
    uint64 requests_total = 2; // Total requests processed
    double avg_latency_ms = 3; // Average request latency
    uint64 errors_total = 4; // Total errors encountered
}
message GetLogsRequest {
    string level = 1; // Log level (e.g., INFO, DEBUG)
}
message GetLogsResponse {
    repeated string logs = 1; // List of log messages
}
